// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dumps some data with a label 1`] = `
<div>
  <div
    class="card accent yellow"
  >
    <div
      class="padded base"
    >
      <details>
        <summary>
          <b
            class="base bold"
          >
            💩
          </b>
        </summary>
        <pre>
          {
  "Foo": "bar"
}
        </pre>
      </details>
    </div>
  </div>
</div>
`;

exports[`renders a DataDump 1`] = `
<div>
  <div
    class="card accent yellow"
  >
    <div
      class="padded base"
    >
      <details>
        <summary>
          <b
            class="base bold"
          >
            Raw Data
          </b>
        </summary>
        <pre>
          {
  "Foo": "bar"
}
        </pre>
      </details>
    </div>
  </div>
</div>
`;
